# Natural_Reserve

./: CMakeLists.txt  comandos.txt  constantes.txt
Logic/TPpack/Cfiles/: Animal.cpp  Food.cpp  Reserve.cpp  SimGUI.cpp  Simulator.cpp  main.cpp
Logic/TPpack/Headers/: Animal.h  Food.h  Reserve.h  SaveState.h  SimGUI.h  Simulator.h
